# scrupp

./: .cvsignore  .gitignore  INSTALL  Makefile  Makefile.am  README.md  configure.ac  main.lua  main.slua
doc/: Makefile.am
doc/lua-oocairo/: Makefile  fontopt.html  path.html  pattern.html  site.css
doc/luasocket/: Makefile.am
examples/: Makefile.am  arguments.slua  console.slua  drawing.slua  event.slua  keyboard.slua  luasocket.slua  mouse.slua  video-settings-dialog.slua  videoSettingsDialog.slua
examples/cairo/: groups.slua  loading-images.slua  masking.slua  repeated-patterns.slua  simple-example.slua  stroke-style.slua  text-path.slua  tolerance.slua  transform.slua
examples/chipmunk/: Makefile.am  cp-helpers.lua
examples/interface/: interface-01.slua  interface-04.slua  interface-05.slua  interface-08.slua
examples/luasocket/: README.scrupp  cddb.lua  daytimeclnt.lua
examples/opengl/: nehe-02.slua  nehe-04.slua
fonts/: Makefile.am
scripts/: Makefile.am  animation.lua  appdir.lua  colors.lua  console.lua  event.lua  font.lua  scene.lua
scripts/interface/: Makefile.am  button.lua  label.lua  video-settings-dialog.lua  videoSettingsDialog.lua
src/: FileIO.c  FileIO.h  Font.c  Graphics.c  Graphics.h  Joystick.c  Joystick.h  Keyboard.c  Macros.c  Macros.h  Main.c  Main.h  Makefile.am  Mouse.c  Movie.c  Movie.h  Sound.c
src/lua-oocairo/: oocairo.c
src/lua-oocairo-1.2/: oocairo.c
src/luafilesystem/: LICENSE  Makefile.am
src/luagl/: Makefile.am
src/luasocket/: Makefile.am
src/werechipmunk/: Makefile.am  cpArbiter-lua.c  cpArbiter-lua.h  cpBody-lua.c  cpBody-lua.h  cpCircleShape-lua.c  cpCircleShape-lua.h  cpConstraint-lua.c  cpConstraint-lua.h  cpMisc-lua.c  cpMisc-lua.h  cpPinJoint-lua.c  cpPivotJoint-lua.c  cpPolyShape-lua.c  cpSegmentShape-lua.c  cpShape-lua.c  cpShape-lua.h  cpSpace-lua.c  cpVect-lua.c  cpVect-lua.h  werechipmunk.h
src/werechipmunk/constraints/: cpDampedRotarySpring-lua.c  cpGearJoint-lua.c  cpRotaryLimitJoint-lua.c
tags/release-0.1/scripts/: animation.lua
tags/release-0.1/src/: FileIO.c  Font.c  Main.h  Sound.h  physfsrwops.c
tags/release-0.2/: Makefile
tags/release-0.2/scripts/: timer.lua
tags/release-0.2/src/: Graphics.c  Graphics.h  Keyboard.h  Macros.c  Main.c  Main.h
tags/release-0.4/: INSTALL  configure.ac
tags/release-0.4/doc/lua-oocairo/: Makefile.am  context.html  index.html  surface.html
tags/release-0.4/examples/: keyboard.slua
tags/release-0.4/examples/cairo/: Makefile.am  README  arc.slua  compositing.slua  fill-rule.slua  inside-tests.slua  masking.slua  text-extents.slua  text-font.slua
tags/release-0.4/examples/luasocket/: README.scrupp
tags/release-0.4/fonts/: Makefile.am
tags/release-0.4/m4/: smpeg.m4
tags/release-0.4/scripts/: Makefile.am  class.lua  color.lua  timer.lua
tags/release-0.4/src/: FileIO.c  FileIO.h  Font.c  Font.h  Keyboard.c  Macros.c  Main.c  Makefile.am  Mouse.c  Mouse.h  Movie.c  Movie.h  Sound.c  Sound.h
tags/release-0.4/src/lua-oocairo/: Makefile.am  obj_font_face.c
tags/release-0.4/src/luasocket/: fullluasocket.c
trunk/: COPYRIGHT  ChangeLog  LICENSE.txt  LICENSES.txt  Makefile  Makefile.am  NOTICE.txt  autogen.sh  configure.ac  main.slua
trunk/doc/lua-oocairo/: download.sh  fontface.html  matrix.html  scaledfont.html  userfont.html
trunk/doc/luafilesystem/: Makefile.am
trunk/examples/: Makefile.am  callbacks.slua  drawing.slua  font.slua  keyboard.slua  luasocket.slua  mouse.slua
trunk/examples/cairo/: create-from-data.slua  text-userfont.slua  text-userfont2.slua
trunk/examples/cairo/images/: Makefile.am
trunk/examples/chipmunk/: README  pyramid-stack.slua  simple.slua
trunk/examples/interface/: interface-02.slua  interface-03.slua  interface-06.slua  interface-07.slua
trunk/examples/luasocket/: Makefile.am  README  listener.lua  talker.lua
trunk/examples/opengl/: Makefile.am  nehe-03.slua  nehe-05.slua  triangle.slua
trunk/scripts/: Makefile.am  animation.lua  appdir.lua  character.lua  color.lua  console.lua  event.lua  font.lua  object.lua
trunk/scripts/interface/: Makefile.am  button.lua  desktop.lua  field.lua  init.lua  theme_default.lua  tip.lua  utils.lua
trunk/scripts/socket/: Makefile.am
trunk/src/: FileIO.c  FileIO.h  Font.c  Graphics.c  Graphics.h  IMG_savepng.c  Macros.c  Macros.h  Main.c  Main.h  Makefile.am  Movie.c  Movie.h  SDL_win32_main.c  Sound.c
trunk/src/chipmunk/: Makefile.am
trunk/src/lua-oocairo/: obj_surface.c
trunk/src/lua-oocairo-1.2/: obj_surface.c
trunk/src/luafilesystem/: Makefile.am
trunk/src/luasocket/: fullluasocket.c
trunk/src/werechipmunk/: Makefile.am  cpArbiter-lua.c  cpBB-lua.c  cpBB-lua.h  cpBody-lua.c  cpBody-lua.h  cpCircleShape-lua.c  cpConstraint-lua.c  cpConstraint-lua.h  cpMisc-lua.c  cpPinJoint-lua.c  cpPivotJoint-lua.c  cpPolyShape-lua.c  cpSegmentShape-lua.c  cpShape-lua.c  cpShape-lua.h  cpSimpleMotor-lua.c  cpSpace-lua.c  cpVect-lua.h
trunk/src/werechipmunk/constraints/: cpDampedSpring-lua.c  cpGrooveJoint-lua.c  cpRatchetJoint-lua.c
