thisdocdir = $(htmldir)/luasocket
thisdoc_DATA = \
	luasocket.png \
	reference.css \
	dns.html \
	ftp.html \
	http.html \
	index.html \
	installation.html \
	introduction.html \
	ltn12.html \
	mime.html \
	reference.html \
	smtp.html \
	socket.html \
	tcp.html \
	udp.html \
	url.html

EXTRA_DIST = $(thisdoc_DATA)
