noinst_LIBRARIES = libluasocket.a
libluasocket_a_SOURCES = \
	auxiliar.h auxiliar.c \
	buffer.h buffer.c \
	except.h except.c \
	inet.h inet.c \
	io.h io.c \
	luasocket.h luasocket.c \
	mime.h mime.c \
	options.h options.c \
	select.h select.c \
	socket.h \
	tcp.h tcp.c \
	timeout.h timeout.c \
	udp.h udp.c \
	usocket.h usocket.c
EXTRA_DIST = LICENSE NEW