noinst_LIBRARIES = libwerechipmunk.a
libwerechipmunk_a_SOURCES = \
  cpArbiter-lua.h      cpArbiter-lua.c \
  cpBB-lua.h           cpBB-lua.c \
  cpBody-lua.h         cpBody-lua.c \
  cpCircleShape-lua.h  cpCircleShape-lua.c \
  cpConstraint-lua.h   cpConstraint-lua.c \
  cpMisc-lua.h         cpMisc-lua.c \
  cpPinJoint-lua.h     cpPinJoint-lua.c \
  cpPivotJoint-lua.h   cpPivotJoint-lua.c \
  cpPolyShape-lua.h    cpPolyShape-lua.c \
  cpSegmentShape-lua.h cpSegmentShape-lua.c \
  cpShape-lua.h        cpShape-lua.c \
  cpSimpleMotor-lua.h  cpSimpleMotor-lua.c \
  cpSpace-lua.h        cpSpace-lua.c \
  cpVect-lua.h         cpVect-lua.c \
  werechipmunk.h
AM_CFLAGS = -I../chipmunk