noinst_LIBRARIES = libchipmunk.a
libchipmunk_a_SOURCES = \
	chipmunk.h chipmunk.c \
	chipmunk_types.h \
	chipmunk_unsafe.h \
	cpArbiter.h cpArbiter.c \
	cpArray.h cpArray.c \
	cpBB.h cpBB.c \
	cpBody.h cpBody.c \
	cpCollision.h cpCollision.c \
	cpHashSet.h cpHashSet.c \
	cpPolyShape.h cpPolyShape.c \
	cpShape.h cpShape.c \
	cpSpace.h cpSpace.c \
	cpSpaceHash.h cpSpaceHash.c \
	cpVect.h cpVect.c \
	prime.h \
	constraints/cpConstraint.h \
	constraints/cpConstraint.c \
	constraints/cpDampedRotarySpring.h \
	constraints/cpDampedRotarySpring.c \
	constraints/cpDampedSpring.h \
	constraints/cpDampedSpring.c \
	constraints/cpGearJoint.h \
	constraints/cpGearJoint.c \
	constraints/cpGrooveJoint.h \
	constraints/cpGrooveJoint.c \
	constraints/cpPinJoint.h \
	constraints/cpPinJoint.c \
	constraints/cpPivotJoint.h \
	constraints/cpPivotJoint.c \
	constraints/cpRatchetJoint.h \
	constraints/cpRatchetJoint.c \
	constraints/cpRotaryLimitJoint.h \
	constraints/cpRotaryLimitJoint.c \
	constraints/cpSimpleMotor.h \
	constraints/cpSimpleMotor.c \
	constraints/cpSlideJoint.h \
	constraints/cpSlideJoint.c \
	constraints/util.h
EXTRA_DIST = LICENSE.txt README.txt
AM_CFLAGS = -std=gnu99 -ffast-math -O3