noinst_LIBRARIES = libwerechipmunk.a
libwerechipmunk_a_SOURCES =               \
  cpArbiter-lua.c                         \
  cpBB-lua.c                              \
  cpBody-lua.c         cpBody-lua.h       \
  cpCircleShape-lua.c                     \
  cpConstraint-lua.c   cpConstraint-lua.h \
  cpMisc-lua.c                            \
  cpPinJoint-lua.c                        \
  cpPivotJoint-lua.c                      \
  cpPolyShape-lua.c                       \
  cpSegmentShape-lua.c                    \
  cpShape-lua.c        cpShape-lua.h      \
  cpSimpleMotor-lua.c                     \
  cpSpace-lua.c                           \
  cpVect-lua.c         cpVect-lua.h       \
  werechipmunk.h
AM_CFLAGS = -I../chipmunk