SUBDIRS = images

exampledir = $(pkgdatadir)/examples/cairo
example_DATA = \
	COPYRIGHT \
	README \
	arc.slua \
	compositing.slua \
	create-from-data.slua \
	fill-rule.slua \
	groups.slua \
	inside-tests.slua \
	loading-images.slua \
	masking.slua \
	repeated-patterns.slua \
	simple-example.slua \
	stroke-style.slua \
	text-extents.slua \
	text-font.slua \
	text-path.slua \
	text-userfont.slua \
	text-userfont2.slua \
	tolerance.slua \
	transform.slua

EXTRA_DIST = $(example_DATA)
	